--- a/creditcard/src/main/webapp/lazyTransaction.xhtml
+++ b/creditcard/src/main/webapp/lazyTransaction.xhtml
@@ -20,16 +20,16 @@
 	                <p:column headerText="TransactionNumber" sortBy="#{transaction.transactionNumber}">
 	                	<h:outputText value="#{transaction.transactionNumber}"/>
 	            	</p:column>
-	            	  <p:column headerText="TransactionNumber" sortBy="#{transaction.localDateTime}">
+	            	  <p:column headerText="LocalDateTime" sortBy="#{transaction.localDateTime}">
 	                	<h:outputText value="#{transaction.localDateTime}"/>
 	            	</p:column>
-	            	  <p:column headerText="TransactionNumber" sortBy="#{transaction.transactionTimeStamp}">
+	            	  <p:column headerText="Transaction TimeStamp" sortBy="#{transaction.transactionTimeStamp}">
 	                	<h:outputText value="#{transaction.transactionTimeStamp}"/>
 	            	</p:column>
-	            	  <p:column headerText="TransactionNumber" sortBy="#{transaction.amount}">
+	            	  <p:column headerText="Amount" sortBy="#{transaction.amount}">
 	                	<h:outputText value="#{transaction.amount}"/>
 	            	</p:column>
-	            	  <p:column headerText="TransactionNumber" sortBy="#{transaction.currency}">
+	            	  <p:column headerText="Currency" sortBy="#{transaction.currency}">
 	                	<h:outputText value="#{transaction.currency}"/>
 	            	</p:column>
                 </p:dataTable>
